fix scrollbar css not taking effect

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -5,12 +5,12 @@ html, body, #app {
   font-family: 'Jura', sans-serif;
   min-height: 100svh;
   font-weight: 600;
-  scrollbar-color: var(--colors-background-600) var(--colors-background-200);
   overflow-x: hidden;
-  .dark & {
-    scrollbar-color: var(--colors-background-300) var(--colors-background-800);
-  }
   transition: background-color 1s, color 1s;
+  scrollbar-color: hsl(from var(--main-colour) h 30% 55%) hsl(from var(--main-colour) h 5% 85%);
+  .dark & {
+    scrollbar-color: hsl(from var(--main-colour) h 30% 45%) hsl(from var(--main-colour) h 5% 25%);
+  }
 }
 
 button, input, select, textarea {
@@ -29,6 +29,5 @@ input, textarea {
 
 :root {
   --main-colour: hsla(22 95% 60% / 1);
-  --un-bg-opacity: 1;
-  --hero-colour: hsla(22 95% 60% / var(--un-bg-opacity));
+  --hero-colour: hsla(22 95% 60% / 1);
 }
